chore: render postgres url

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="postgres://fitapi_user:DS3U0kDekMon30VOEFCmaJOWozd2eh3A@dpg-cg5v3e02qv28u2vnejmg-a.oregon-postgres.render.com/fitapi"
